# AnimManager

./: README.txt
DLL source/: CMakeLists.txt  README.md  how compile DLL and INFO.txt  webpanim.def
DLL source/build32/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  webpanim.sln  webpanim.vcxproj  webpanim.vcxproj.filters
DLL source/build32/Release/: webpanim.exp  webpanim.lib
DLL source/build32/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
DLL source/build32/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  (+1 more)
DLL source/build32/webpanim.dir/Release/: webpanim.dll.recipe
DLL source/build32/webpanim.dir/Release/webpanim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DLL source/build64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  webpanim.sln  webpanim.vcxproj  webpanim.vcxproj.filters
DLL source/build64/Release/: webpanim.exp  webpanim.lib
DLL source/build64/webpanim.dir/Release/: webpanim.dll.recipe
DLL source/build64/webpanim.dir/Release/webpanim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DLL source/build64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
DLL source/build64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
DLL source/include/: webpanim.h
DLL source/qb64/: demo_webpanim.bas  demo_webpanim_player.bas  webpanim.bi  webpanim_helper_decl.bi  webpanim_helper_impl.bi
DLL source/src/: webpanim.c
(+8 files in other folders)
